@@ -2,6 +2,7 @@
   [New Features]
     * Add Net::SSLeay::X509_STORE_CTX#set_error method.
     * Add Net::SSLeay::X509_STORE_CTX#get_error method.
+    * Add Net::SSLeay::X509_STORE_CTX#get_error_depth method.
     
 0.011 2024-11-12
   [New Features]
